# ResilientOps

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark.py
dashboard/: app.py
data/examples/: disruption.json  medium.json  small.json
data/invalid/: cyclic_dependencies.json
scripts/: smoke.py
src/resilient_ops/: __init__.py  __main__.py  cli.py  logging_config.py
src/resilient_ops/api/: app.py
src/resilient_ops/domain/: __init__.py  models.py  validation.py
src/resilient_ops/evaluation/: __init__.py  comparison.py  explanations.py  metrics.py  reporting.py
src/resilient_ops/generators/: __init__.py  synthetic.py
src/resilient_ops/repair/: __init__.py  engine.py  events.py  stability.py
src/resilient_ops/scheduling/: __init__.py  base.py  baselines.py  cp_sat.py  feasibility.py
src/resilient_ops/visualization/: __init__.py  gantt.py
tests/: conftest.py  test_api.py  test_baselines.py  test_cp_sat.py  test_explanations.py  test_metrics.py  test_repair.py  test_validation.py
