[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "resilient-ops"
version = "0.1.0"
description = "Constraint-based maintenance scheduling and disruption repair"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = {text = "MIT"}
authors = [{name = "ResilientOps Contributors"}]
dependencies = [
  "fastapi>=0.115,<1",
  "numpy>=2.0,<3",
  "ortools>=9.11,<10",
  "pandas>=2.2,<3",
  "plotly>=5.24,<7",
  "pydantic>=2.9,<3",
  "streamlit>=1.39,<2",
  "uvicorn>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.13,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
  "ruff>=0.7,<1",
]

[project.scripts]
resilient-ops = "resilient_ops.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=resilient_ops --cov-report=term-missing --cov-fail-under=75"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
packages = ["resilient_ops"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["ortools.*", "plotly.*", "streamlit.*", "pandas.*"]
ignore_missing_imports = true
